; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_physbusif.c___getDeviceId.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_physbusif.c___getDeviceId.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@__ntd_ohci_initflag = common dso_local global i32 0, align 4
@__ntd_ohci = common dso_local global i32 0, align 4
@USB_OH0_DEVICE_ID = common dso_local global i32 0, align 4
@__usbdev = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@USB_OH1_DEVICE_ID = common dso_local global i32 0, align 4
@__ntd_usb_fd = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i32)* @__getDeviceId to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @__getDeviceId(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i64 0, i64* %5, align 8
  %6 = load i32, i32* @__ntd_ohci_initflag, align 4
  %7 = icmp eq i32 %6, 1
  br i1 %7, label %8, label %26

8:                                                ; preds = %2
  %9 = load i32, i32* @__ntd_ohci, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %8
  %12 = load i32, i32* @USB_OH0_DEVICE_ID, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call i64 @USB_OpenDevice(i32 %12, i32 %13, i32 %14, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @__usbdev, i32 0, i32 0))
  store i64 %15, i64* %5, align 8
  br label %25

16:                                               ; preds = %8
  %17 = load i32, i32* @__ntd_ohci, align 4
  %18 = icmp eq i32 %17, 1
  br i1 %18, label %19, label %24

19:                                               ; preds = %16
  %20 = load i32, i32* @USB_OH1_DEVICE_ID, align 4
  %21 = load i32, i32* %3, align 4
  %22 = load i32, i32* %4, align 4
  %23 = call i64 @USB_OpenDevice(i32 %20, i32 %21, i32 %22, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @__usbdev, i32 0, i32 0))
  store i64 %23, i64* %5, align 8
  br label %24

24:                                               ; preds = %19, %16
  br label %25

25:                                               ; preds = %24, %11
  br label %31

26:                                               ; preds = %2
  %27 = load i32, i32* @USB_OH1_DEVICE_ID, align 4
  %28 = load i32, i32* %3, align 4
  %29 = load i32, i32* %4, align 4
  %30 = call i64 @USB_OpenDevice(i32 %27, i32 %28, i32 %29, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @__usbdev, i32 0, i32 0))
  store i64 %30, i64* %5, align 8
  br label %31

31:                                               ; preds = %26, %25
  %32 = load i64, i64* %5, align 8
  %33 = icmp eq i64 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %31
  %35 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @__usbdev, i32 0, i32 0), align 4
  store i32 %35, i32* @__ntd_usb_fd, align 4
  br label %36

36:                                               ; preds = %34, %31
  %37 = load i64, i64* %5, align 8
  ret i64 %37
}

declare dso_local i64 @USB_OpenDevice(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
